<resources>
    <string name="app_name">小b站</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="string">你所热爱的就是你的生活</string>
    <string name="region">分区</string>
    <string name="up">UP</string>
    <string name="_00_00">00:00</string>
    <string name="_100">100</string>
    <string name="click_to_send_danmu">点我发弹幕</string>
    <string name="name">name</string>
    <string name="subscribe">关注</string>
    <string name="copyright">未经作者授权禁止转载</string>
    <string name="comment">热门评论</string>
    <string name="comment_type">按热度</string>
    <string name="send_comment">发一条友善的评论</string>
    <string name="add_to_watch_late">添加至稍后再看</string>
    <string name="feedback">反馈</string>
    <string name="optimization">(选择后将优化首页此类内容)</string>
    <string name="horrible_bloody">恐怖血腥</string>
    <string name="porn">色情低俗</string>
    <string name="nausea">封面恶心</string>
    <string name="cover_party">标题党/封面党</string>
    <string name="want_not_watch">我不想看</string>
    <string name="reduce">(选择后将减少相似内容推荐)</string>
    <string name="up_">UP主:</string>
    <string name="partition">分区:</string>
    <string name="channel">频道:</string>
    <string name="so_much">此类内容过多</string>
    <string name="recommended">推荐过</string>
    <string name="dislike">不感兴趣</string>
    <string name="cancel">取消</string>
    <string name="reset">撤销</string>
    <string name="optimization_this_content">将优化首页此类内容</string>
    <string name="long_click">(长按拖动修改首页顺序)</string>
    <string name="search">搜索</string>
    <string name="complete_list">完整榜单</string>
    <string name="bilibili_hot_search">bilibili热搜</string>
    <string name="irrelevant">与搜索词无关</string>
    <string name="search_feedback">搜索反馈</string>
    <string name="poor_quality">看后发现质量差</string>
    <string name="outdated_content">内容过时</string>
    <string name="dont_watch">我不想看该视频</string>
    <string name="share">分享</string>
    <string name="split">/</string>
    <string name="home">主页</string>
    <string name="my">我的</string>
    <string name="to_login">去登录</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="to_register">去注册</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="app_zrq">本APP由ZRQ独立开发</string>
    <string name="send_msg">获取验证码</string>
    <string name="input_msg">请输入验证码</string>
</resources>