<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F7F9"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_shaohouguankan"
            app:tint="@color/_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_watch_late"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/___grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/optimization"
            android:textColor="@color/_grey"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBloody"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/horrible_bloody" />

        <TextView
            android:id="@+id/tvPorn"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/porn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNausea"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/nausea" />

        <TextView
            android:id="@+id/tvCover"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/cover_party" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/___grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_not_watch"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/reduce"
            android:textColor="@color/_grey"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUpName"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/up_" />

        <TextView
            android:id="@+id/tvPartition"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/partition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvChannel"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/channel" />

        <TextView
            android:id="@+id/tvSoMach"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/so_much" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRecommended"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/recommended" />

        <TextView
            android:id="@+id/tvDislike"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/dislike" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#F3F3F3" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textColor="@color/grey"
        android:textSize="14sp" />
</LinearLayout>