<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F7F9"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_shaohouguankan"
            app:tint="@color/_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_watch_late"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            android:rotationY="180"
            android:src="@drawable/ic_round_reply_24"
            app:tint="@color/_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/___grey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:padding="15dp"
        android:text="@string/search_feedback"
        android:textColor="@color/grey"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvIrrelevant"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/irrelevant" />

        <TextView
            android:id="@+id/tv_poor_quality"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/poor_quality" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_outdated_content"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/outdated_content" />

        <TextView
            android:id="@+id/tv_dont_watch"
            style="@style/tvSettingCell"
            android:paddingVertical="10dp"
            android:text="@string/dont_watch" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#F3F3F3" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textColor="@color/grey"
        android:textSize="14sp" />
</LinearLayout>