<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:id="@+id/llDislike"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBlur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/ivEmo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_buganxingqu"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvBanType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivEmo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBanType"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/optimization_this_content"
                android:textColor="@color/_white"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llReset"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_chexiao"
                app:tint="@color/_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/reset"
                android:textColor="@color/grey"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:foreground="@drawable/pressed_background_black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivCover"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_video_bg"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/ivPlayNum"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_bofangshu"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tvPlayNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/ivPlayNum"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_toStartOf="@id/tvDanMu"
                    android:src="@drawable/ic_danmushu"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tvDanMu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/_100"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/_00_00"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="2"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/ivUp"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_upzhu"
                        app:tint="@color/_grey" />

                    <TextView
                        android:id="@+id/tvUpName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/ivUp"
                        android:text="@string/app_name"
                        android:textColor="@color/_grey"
                        android:textSize="11sp" />

                    <ImageView
                        android:id="@+id/iv_setting"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_more_vert_24"
                        app:tint="@color/_grey" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>